# Concreter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  requirements.txt
.cargo/: config.toml
deploy/k8s/: axum-deployment.yaml  k8s_basic.md  k8s_config.md  kustomization.yaml  postgres-deployment.yaml  rpc-py-deployment.yaml
deploy/k8s/docs/: k8s_app.md  k8s_cluster.md  k8s_security.md
examples/: gen_key.rs  quick_dev.rs  simple.md  建筑工程合同管理.md  建筑智能施工技术.md
frontend/: package-lock.json  package.json  revealjs.d.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/article/: page.tsx
frontend/src/app/article/[id]/: page.tsx
frontend/src/app/article/new/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/components/: article.tsx  btn.tsx  entity.tsx  form.tsx  navibar.tsx  profile.tsx  reveal.tsx
frontend/src/utils/: fetcher.ts  useArticle.ts  useEntity.ts  useUser.ts
proto/: nlp.proto  sym.proto
rfcs/: 0001-tech-selection.md
sql/dev_init/: 00-createdb.sql  01-schema.sql  02-devseed.sql
src/: error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/analyze/: article.rs  mod.rs
src/anylize/: README.md  article.rs  error.rs  mod.rs
src/config/: error.rs  mod.rs
src/ctx/: error.rs  mod.rs
src/db/: READEME.md  db_bmc.rs  error.rs  mod.rs  node.rs
src/db/doc/: README.md  agdb_usage.md
src/entity/: mod.rs
src/model/: article.rs  base.rs  comment.rs  error.rs  formula.rs  macros.rs  mod.rs  store.rs  user.rs  word.rs
src/model/doc/: agdb_usage.md
src/model/docs/: agdb_efficient.md
src/model/edge/: authored.rs  commented.rs  has.rs  mod.rs  rely.rs
src/model/node/: article.rs  comment.rs  entity.rs  formula.rs  mod.rs  user.rs  word.rs
src/model/pg/: article.rs  comment.rs  entity.rs  formula.rs  mod.rs  user.rs
src/nlp/: baidu_ner.rs  error.rs  mod.rs  nlp_api.rs
src/pb/: error.rs  mod.rs  nlp.rs  sym.rs
src/pwd/: error.rs  hmac_hasher.rs  mod.rs
src/token/: error.rs  mod.rs
src/utils/: b64.rs  time.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_article.rs  routes_auth.rs  routes_entity.rs  routes_formula.rs  routes_login.rs  routes_md.rs  routes_static.rs  routes_user.rs
src/web/error/: article_error.rs  auth_error.rs  cookie_error.rs  entity_error.rs  formula_error.rs  login_error.rs  mod.rs
src/web/rpc/: mod.rs
src_py/: main.py  nlp_pb2.py  nlp_pb2.pyi  nlp_pb2_grpc.py  nlp_utils.py  openai_utils.py  requirements.txt  sym_pb2.py  sym_pb2.pyi  sym_pb2_grpc.py  sym_utils.py  utils.py
web-folder/: index.html
